--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NsN-Op-4bX">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,34 +10,120 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Item-->
+        <scene sceneID="2Rg-AW-SpO">
+            <objects>
+                <viewController storyboardIdentifier="TableView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="u1c-Kf-qGr" customClass="TableViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="V92-7b-HGZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aFf-dT-D0F">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" id="yMu-2m-dc0">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yMu-2m-dc0" id="lKf-n9-CcK">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="u1c-Kf-qGr" id="NFD-WF-dm8"/>
+                                    <outlet property="delegate" destination="u1c-Kf-qGr" id="6PO-G5-YKc"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="aFf-dT-D0F" firstAttribute="top" secondItem="VaE-sd-EJp" secondAttribute="top" id="MvC-SM-uy8"/>
+                            <constraint firstItem="aFf-dT-D0F" firstAttribute="leading" secondItem="VaE-sd-EJp" secondAttribute="leading" id="YEz-P5-btG"/>
+                            <constraint firstItem="aFf-dT-D0F" firstAttribute="bottom" secondItem="VaE-sd-EJp" secondAttribute="bottom" id="aoM-GR-uPd"/>
+                            <constraint firstItem="aFf-dT-D0F" firstAttribute="trailing" secondItem="VaE-sd-EJp" secondAttribute="trailing" id="n7q-Ld-Trx"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="VaE-sd-EJp"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="fVq-b7-svd"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hyt-Rn-5pR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1853.6231884057972" y="-634.15178571428567"/>
+        </scene>
+        <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MapViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="zjq-cD-a0e">
-                                <rect key="frame" x="0.0" y="44" width="414" height="571"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="6KR-ax-5jp"/>
+                                </connections>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="zjq-cD-a0e" secondAttribute="bottom" constant="247" id="4CG-Rk-Whz"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zjq-cD-a0e" secondAttribute="trailing" id="KzQ-Zh-S42"/>
-                            <constraint firstItem="zjq-cD-a0e" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="luH-H9-5c2"/>
-                            <constraint firstItem="zjq-cD-a0e" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="xrQ-33-6KK"/>
+                            <constraint firstItem="zjq-cD-a0e" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="CVB-dA-K72"/>
+                            <constraint firstItem="zjq-cD-a0e" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="OaZ-Ud-vlc"/>
+                            <constraint firstItem="zjq-cD-a0e" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="xH2-hR-XtB"/>
+                            <constraint firstItem="zjq-cD-a0e" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yTm-bN-ue5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="r0h-si-ucu"/>
+                    <navigationItem key="navigationItem" id="9gs-cY-dEA">
+                        <barButtonItem key="leftBarButtonItem" id="EdF-us-xxv"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="zjq-cD-a0e" id="Vqf-HN-N5N"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1855.072463768116" y="18.75"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="aSw-7P-m2y">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NsN-Op-4bX" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="v0v-dU-Zlu">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="3bu-9k-mnZ" kind="relationship" relationship="rootViewController" id="0ah-70-ghd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E3U-R6-qbp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="34.782608695652179" y="18.75"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="hqb-Ld-bwm">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="3bu-9k-mnZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="Ssw-ff-BXN"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ujt-1a-DiW">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Eld-au-3qL"/>
+                        <segue destination="u1c-Kf-qGr" kind="relationship" relationship="viewControllers" id="j1x-eJ-AvW"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="14a-0o-j8b" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="944.92753623188412" y="18.75"/>
         </scene>
     </scenes>
 </document>
