--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -149,7 +149,7 @@
                                         <rect key="frame" x="0.0" y="140.33333333333331" width="343" height="30"/>
                                         <state key="normal" title="Button"/>
                                         <connections>
-                                            <segue destination="Eci-Mo-5ow" kind="show" identifier="addressToMap" id="io3-LT-ueI"/>
+                                            <segue destination="Eci-Mo-5ow" kind="show" identifier="addressToMap" id="K5O-1G-Gjx"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZI9-j4-DVP">
@@ -187,7 +187,7 @@
         <!--Add Location On Map View Controller-->
         <scene sceneID="eSF-jn-rqc">
             <objects>
-                <viewController storyboardIdentifier="LocationOnMap" useStoryboardIdentifierAsRestorationIdentifier="YES" id="XgU-bC-9BP" customClass="AddLocationOnMapViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LocationOnTheMap" useStoryboardIdentifierAsRestorationIdentifier="YES" id="XgU-bC-9BP" customClass="AddLocationOnMapViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="667-ez-v17">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -324,6 +324,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="Ssw-ff-BXN"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ujt-1a-DiW">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -380,6 +381,6 @@
         <image name="location-view-controller" width="375" height="812"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="io3-LT-ueI"/>
+        <segue reference="K5O-1G-Gjx"/>
     </inferredMetricsTieBreakers>
 </document>
